Add pyproject to ci filters to capture settings changes to styling reqs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
             style:
               - '.github/**'
               - 'hubcast/**'
+              - 'pyproject.toml'
 
   style:
     if: ${{ needs.changes.outputs.style == 'true' }}
