--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
     needs: style
     strategy:
       matrix:
-        python-version: ['3.11']
+        python-version: ['3.8', '3.9', '3.10', '3.11']
     permissions:
       pull-requests: read
     steps:
@@ -56,8 +56,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install test dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install tox
+          pip install --upgrade pip tox
       - name: Test with tox
         run: |
           tox -e ${{ matrix.python-version }}
