--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,3 +63,16 @@ hubcast = ["py.typed"]
 
 [tool.setuptools.packages.find]
 include = ["hubcast*"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+
+[tool.tox]
+legacy_tox_ini = """
+    [tox]
+    envlist = py311
+
+    [testenv]
+    extras = dev
+    commands = pytest -s tests
+"""
