Limit Unit Tests to Only Run When Code is Changed (#22)
* Integrate unit-tests ci into filters system

* Depend unit test on style checks

* Remove py-tox from Spack environment

* Add dependencies for unit-tests

* Add flake8 and black to Spack Env

--- a/spack.yaml
+++ b/spack.yaml
@@ -8,8 +8,12 @@ spack:
   - python
   - py-aiohttp
   - py-cachetools
-  # - py-gidgethub
-  # - py-gidgetlab
+  - py-gidgethub
+  - py-gidgetlab
+  - py-pytest
+  - py-pytest-asyncio
+  - py-flake8
+  - py-black
   - smee-client
   view: true
   concretizer:
