Consolidate config to __main__ and refactor git

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ maintainers = [
 keywords = ["github", "gitlab", "mirroring", "ci"]
 dependencies = [
     "aiohttp",
+    "attrs",
+    "dynaconf",
     "cachetools",
     "gidgethub",
     "gidgetlab",
