Rewrite to Support Multiple Repos, Git via Tokens, and Centralized Config (#37)
* Add initial working rewrite to support unified config, multiple accounts, and access token auth

* Run black and isort on files

* Fix up GitLab handler and add more documentation

* Allow for multiple installations ids

* Update hubcast/account_map/file.py

Co-authored-by: Thomas Mendoza <tgmachina@users.noreply.github.com>

* Fix unit tests to support rewrite

* Format with black

* Simplify tests and add missing dep to ci

* Add cachetools dep to ci

* Revert to subprocess.run without shell

Co-authored-by: Thomas Mendoza <tgmachina@users.noreply.github.com>

* Fix style and flake8 errors

---------

Co-authored-by: Thomas Mendoza <tgmachina@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "cachetools",
     "gidgethub",
     "gidgetlab",
+    "pyyaml",
 ]
 dynamic = ["version"]
 
@@ -26,16 +27,19 @@ dynamic = ["version"]
 dev = [
     "pytest",
     "pytest-asyncio",
+    "pytest-mock"
 ]
 
 [tool.black]
+line-length = 88
 target-version = ["py38", "py39", "py310", "py311"]
 color = true
 
 [tool.isort]
+color_output = true
+line_length = 88
 profile = "black"
 skip_gitignore = true
-color_output = true
 
 [tool.mypy]
 python_version = "3.8"
