--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,34 @@
 [build-system]
-requires = ["setuptools >= 61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling >= 1.26"]
+build-backend = "hatchling.build"
 
 [project]
 name = "hubcast"
-description = "An event driven synchronization application for bridging GitHub and GitLab."
-readme = "README.md"
-license = {file = "LICENSE"}
-authors = [
-    {name = "Alec Scott", email = "alec@llnl.gov"},
-]
-maintainers = [
-    {name = "Alec Scott", email = "alec@llnl.gov"},
-]
-keywords = ["github", "gitlab", "mirroring", "ci"]
+version = "0.0.1"
 dependencies = [
     "aiohttp",
     "cachetools",
     "gidgethub",
     "gidgetlab",
+    "repligit[aiohttp]",
     "pyyaml",
 ]
-dynamic = ["version"]
+authors = [
+    { name = "Alec Scott" },
+]
+description = "An event driven synchronization application for bridging GitHub and GitLab."
+readme = "README.md"
+requires-python = ">=3.10"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Operating System :: OS Independent",
+]
+license = "Apache-2.0"
+keywords = ["github", "gitlab", "mirroring", "ci"]
+
+[project.urls]
+Homepage = "https://github.com/llnl/hubcast"
+Issues = "https://github.com/llnl/hubcast/issues"
 
 [project.optional-dependencies]
 dev = [
@@ -30,65 +37,11 @@ dev = [
     "pytest-mock"
 ]
 
-[tool.black]
-line-length = 88
-target-version = ["py38", "py39", "py310", "py311"]
-color = true
-
-[tool.isort]
-color_output = true
-line_length = 88
-profile = "black"
-skip_gitignore = true
-
-[tool.mypy]
-python_version = "3.8"
-ignore_missing_imports = true
-
-# strict
-warn_unused_configs = true
-disallow_any_generics = true
-disallow_subclassing_any = true
-disallow_untyped_calls = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_return_any = true
-no_implicit_reexport = true
-strict_equality = true
-
-# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
-[tool.setuptools.dynamic]
-version = {attr = "hubcast.__version__"}
-
-[tool.setuptools.package-data]
-hubcast = ["py.typed"]
-
-[tool.setuptools.packages.find]
-include = ["hubcast*"]
-
 [tool.pytest.ini_options]
-asyncio_mode = "auto"
-norecursedirs = [
-    "__pycache__",
-    ".spack-env",
+pythonpath = [
+  "src"
 ]
-testpaths = [
-    "tests",
-    "docs/tutorials",
-]
-tmp_path_retention_policy = "failed"
 
-[tool.tox]
-legacy_tox_ini = """
-[tox]
-envlist = py311
-
-[testenv]
-extras = dev
-commands = pytest
-"""
+[tool.ruff]
+line-length = 88
+exclude = ["spack"]
