--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Lint and Format Check with Flake8 and Black
         run: |
           black --diff --check .
-          flake8 hubcast/
+          flake8 src/hubcast/
           codespell
