--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -4,16 +4,17 @@ on:
   workflow_dispatch:
   workflow_call:
 
+
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@8d9ed9ac5c53483de85588cdf95a591a75ab9f55
         with:
-          python-version: '3.11'
+          python-version: '3.10'
           cache: 'pip'
           cache-dependency-path: '.github/workflows/requirements/style.txt'
 
@@ -21,8 +22,11 @@ jobs:
         run: |
           pip install -r .github/workflows/requirements/style.txt
 
-      - name: Lint and Format Check with Flake8 and Black
+      - name: Run Ruff
         run: |
-          black --diff --check .
-          flake8 src/hubcast/
-          codespell
+          ruff check --diff
+          ruff check --select I --diff
+          ruff format --check --diff
+
+      - name: Run Typos
+        run: typos
