Rewrite for Repligit Integration (#122)
* Initial commit of rewrite for repligit and better structure

* Clean up github client implementation for status checks

* Add partial repo config support

* Refactor status reporting out to client

* Refactor event handlers for internal prs and branches

* Add gitlab client webhook create

* Fix style check for new paths

* Inherit CI/CD from repligit

* Fix styling of imports

* Fix typos in documentation

--- a/spack.yaml
+++ b/spack.yaml
@@ -3,20 +3,17 @@
 # It describes a set of packages to be installed, along with
 # configuration settings.
 spack:
-  # add package specs to the `specs` list
+  repos:
+  - $env/spack/repo
   specs:
-  - python
-  - py-aiohttp
-  - py-cachetools
-  - py-gidgethub
-  - py-gidgetlab
-  - py-pyyaml
-  - py-pytest
-  - py-pytest-mock
-  - py-pytest-asyncio
-  - py-flake8
-  - py-black
+  - py-pip
+  - py-hubcast
   - smee-client
+  - typos
   view: true
   concretizer:
     unify: true
+  develop:
+    py-hubcast:
+      spec: py-hubcast@=main
+      path: $env
