--- a/spack.yaml
+++ b/spack.yaml
@@ -4,7 +4,7 @@
 # configuration settings.
 spack:
   repos:
-  - $env/spack/repo
+  - $env/spack/spack_repo/hubcast
   specs:
   - py-pip
   - py-hubcast
