Fix label instructions for new Spack format

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -8,7 +8,7 @@ dependencies:
   - any-glob-to-any-file:
     - .github/workflows/requirements/**
     - pyproject.toml
-    - spack.yaml
+    - spack/**
 
 docs:
 - changed-files:
