I'd been wrong about the format before, this is the way

--- a/spack/spack.yaml
+++ b/spack/spack.yaml
@@ -4,7 +4,7 @@
 # configuration settings.
 spack:
   repos:
-  - $env/spack_repo/hubcast
+  - $env/repos/spack_repo/hubcast
   specs:
   - py-pip
   - py-hubcast
