spack: fix layout to be better compatible with v1.0

--- a/.envrc
+++ b/.envrc
@@ -6,5 +6,5 @@
 #------------------------------------------------------------------------
 if type spack &>/dev/null; then
     . $SPACK_ROOT/share/spack/setup-env.sh
-    spack env activate -d spack/
+    spack env activate -d .
 fi
