--- a/spack.yaml
+++ b/spack.yaml
@@ -4,7 +4,7 @@
 # configuration settings.
 spack:
   repos:
-  - $env/repos/spack_repo/hubcast
+    hubcast: spack/repos/spack_repo/hubcast
   specs:
   - py-pip
   - py-hubcast
@@ -16,4 +16,4 @@ spack:
   develop:
     py-hubcast:
       spec: py-hubcast@=main
-      path: $env/../
+      path: .
