--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       pull-requests: read
     outputs:
       style: ${{ steps.filter.outputs.style }}
+      security: ${{ steps.filter.outputs.security }}
       unit-tests: ${{ steps.filter.outputs.unit-tests }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # @v2
@@ -34,6 +35,11 @@ jobs:
               - '.github/**/*'
               - 'src/**/*'
               - 'pyproject.toml'
+            security:
+              - '.github/**/*'
+              - 'src/**/*'
+              - 'pyproject.toml'
+              - '.bandit'
            # unit-tests:
            #   - '.github/**/*'
            #   - 'src/**/*'
@@ -44,6 +50,11 @@ jobs:
     if: ${{ needs.changes.outputs.style == 'true' }}
     needs: changes
     uses: ./.github/workflows/style.yml
+
+  security:
+    if: ${{ needs.changes.outputs.security == 'true' }}
+    needs: [changes, style]
+    uses: ./.github/workflows/security.yml
 
   # unit-tests:
   #   if: ${{ needs.changes.outputs.unit-tests == 'true' }}
@@ -59,6 +70,7 @@ jobs:
     needs:
      - changes
      - style
+     - security
      # - unit-tests
      # - coverage
     if: always()
