add scoped permissions to security workflow and rm workflow_dispatch: trigger
Co-authored-by: Caetano Melone <melone1@llnl.gov>
Co-authored-by: Alec Scott <scott112@llnl.gov>

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,9 +1,9 @@
 name: Security Checks
 on:
-  # This Workflow can be triggered manually
-  workflow_dispatch:
   workflow_call:
 
+permissions:
+  contents: read
 
 jobs:
   security:
