--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,9 @@ jobs:
     if: ${{ needs.changes.outputs.security == 'true' }}
     needs: [changes, style]
     uses: ./.github/workflows/security.yml
+    permissions:
+      contents: read
+      security-events: write
 
   # unit-tests:
   #   if: ${{ needs.changes.outputs.unit-tests == 'true' }}
