--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,12 +2,13 @@ name: Security Checks
 on:
   workflow_call:
 
+permissions:
+  contents: read
+  security-events: write
 
 jobs:
   bandit-scan:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
@@ -20,60 +21,37 @@ jobs:
           cache-dependency-path: '.github/workflows/requirements/security.txt'
 
       - name: Install Python dependencies
-        run: |
-          pip install -r .github/workflows/requirements/security.txt
+        run: pip install -r .github/workflows/requirements/security.txt
 
       - name: Run Bandit
-        run: |
-          bandit -r src -f sarif -o results.sarif
+        run: bandit -c pyproject.toml -r src -f sarif -o results.sarif
 
-      # upload security results to github; a bot will add inline comments to the PR if any issues are found
-      # https://docs.github.com/en/code-security/code-scanning/integrating-with-code-scanning/uploading-a-sarif-file-to-github
+      # upload security results to github; a bot will add inline comments to
+      # the PR if any issues are found
       - name: Upload SARIF file
         if: always()
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@3c3833e0f8c1c83d449a7478aa59c036a9165498
         with:
           sarif_file: results.sarif
           category: bandit
 
   codeql-analyze:
-    name: CodeQL Analyze (${{ matrix.language }})
-    # Runner size impacts CodeQL analysis time. To learn more, please see:
-    #   - https://gh.io/recommended-hardware-resources-for-running-codeql
-    #   - https://gh.io/supported-runners-and-hardware-resources
-    #   - https://gh.io/using-larger-runners (GitHub.com only)
-    # Consider using larger runners or machines with greater resources for possible analysis time improvements.
-    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
-    permissions:
-      contents: read
-      security-events: write
-
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        include:
-        - language: actions
-          build-mode: none
-        - language: python
-          build-mode: none
+        language: [actions, python]
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
-    # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
+      uses: github/codeql-action/init@3c3833e0f8c1c83d449a7478aa59c036a9165498
       with:
         languages: ${{ matrix.language }}
-        build-mode: ${{ matrix.build-mode }}
-        # If you wish to specify custom queries, you can do so here or in a config file.
-        # By default, queries listed here will override any specified in a config file.
-        # Prefix the list here with "+" to use these queries and those in the config file.
-
-        # For more details on CodeQL's query packs, refer to: https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
-        # queries: security-extended,security-and-quality
+        build-mode: none
 
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
+      uses: github/codeql-action/analyze@3c3833e0f8c1c83d449a7478aa59c036a9165498
       with:
         category: "/language:${{matrix.language}}"
