--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       style: ${{ steps.filter.outputs.style }}
       security: ${{ steps.filter.outputs.security }}
       unit-tests: ${{ steps.filter.outputs.unit-tests }}
+      container: ${{ steps.filter.outputs.container }}
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # @v2
         if: ${{ github.event_name == 'push' }}
@@ -46,6 +47,11 @@ jobs:
            #   - 'src/**/*'
            #   - 'tests/**/*'
            #   - 'pyproject.toml'
+            container:
+              - '.github/**/*'
+              - 'src/**/*'
+              - 'pyproject.toml'
+              - 'Dockerfile'
 
   style:
     if: ${{ needs.changes.outputs.style == 'true' }}
@@ -70,6 +76,11 @@ jobs:
   #   needs: [changes, style, unit-tests]
   #   uses: ./.github/workflows/coverage.yml
 
+  container:
+    if: ${{ needs.changes.outputs.container == 'true' }}
+    needs: [changes, style, security]
+    uses: ./.github/workflows/container.yml
+
   all:
     needs:
      - changes
@@ -77,6 +88,7 @@ jobs:
      - security
      # - unit-tests
      # - coverage
+     - container
     if: always()
     runs-on: ubuntu-latest
     steps:
