add a missing dep and fix module import

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "gidgetlab",
     "repligit[aiohttp]",
     "pyyaml",
+    "aiojobs",
 ]
 authors = [
     { name = "Alec Scott" },
