add permissions block for workflow
Co-authored-by: Alec Scott <hi@alecbcs.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,9 @@ jobs:
     if: ${{ needs.changes.outputs.container == 'true' }}
     needs: [changes, style, security]
     uses: ./.github/workflows/container.yml
+  permissions:
+    contents: read
+    packages: write
 
   all:
     needs:
