--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "hubcast"
 version = "0.0.1"
 dependencies = [
     "aiohttp",
+    "aiojobs",
     "cachetools",
     "gidgethub",
     "gidgetlab",
